force-app/main/default/objects/Material__c/fields/CargoTypeUnit__c.field-meta.xml
<CustomField>
    <fullName>CargoTypeUnit__c</fullName>
    <label>CARGO TYPE(UNIT)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitType</valueSetName>
    </valueSet>
</CustomField>