force-app/main/default/objects/Material__c/fields/HSCodeID__c.field-meta.xml
<CustomField>
    <fullName>HSCodeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS CODE ID</label>
    <referenceTo>HS_Code__c</referenceTo>
    <relationshipLabel>MATERIAL</relationshipLabel>
    <relationshipName>Material</relationshipName>
    <type>Lookup</type>
</CustomField>