force-app/main/default/objects/Material__c/fields/LWHUnit__c.field-meta.xml
<CustomField>
    <fullName>LWHUnit__c</fullName>
    <label>L/W/H UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WLDUnit</valueSetName>
    </valueSet>
</CustomField>