force-app/main/default/objects/Material__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MANUFACTURER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MATERIAL</relationshipLabel>
    <relationshipName>Material</relationshipName>
    <type>Lookup</type>
</CustomField>