force-app/main/default/objects/Material__c/fields/MaterialDetail__c.field-meta.xml
<CustomField>
    <fullName>MaterialDetail__c</fullName>
    <label>MATERIAL DETAIL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>