force-app/main/default/objects/Material__c/fields/MaterialPhoto__c.field-meta.xml
<CustomField>
    <fullName>MaterialPhoto__c</fullName>
    <label>MATERIAL PHOTO</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>