force-app/main/default/objects/Material__c/fields/MaxSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>MaxSellingUnitPriceLocal__c</fullName>
    <label>MAX SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>