force-app/main/default/objects/Material__c/fields/MinSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>MinSellingUnitPriceLocal__c</fullName>
    <label>MIN SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>