force-app/main/default/objects/Material__c/fields/NetWeight__c.field-meta.xml
<CustomField>
    <fullName>NetWeight__c</fullName>
    <label>NET WEIGTH(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>