force-app/main/default/objects/Material__c/fields/RollupStockOut__c.field-meta.xml
<CustomField>
    <fullName>RollupStockOut__c</fullName>
    <label>ROLLUP NUMBER OF STOCK OUTBOUND</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>