force-app/main/default/objects/Material__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>SERIAL NUMBER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>