force-app/main/default/objects/Material__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SKU</valueSetName>
    </valueSet>
</CustomField>