force-app/main/default/objects/Material__c/fields/StandardSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>StandardSellingUnitPriceUSD__c</fullName>
    <label>STANDARD SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>