force-app/main/default/objects/Material__c/fields/StockHold__c.field-meta.xml
<CustomField>
    <fullName>StockHold__c</fullName>
    <label>STOCK HOLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>