force-app/main/default/objects/Material__c/fields/StockHoldFormula__c.field-meta.xml
<CustomField>
    <fullName>StockHoldFormula__c</fullName>
    <formula>RollupStockIn__c -  RollupStockOut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stock Hold-Formula=Rollup Number of Stock Inbound-Rollup Number of Stock Outbound</inlineHelpText>
    <label>STOCK HOLD-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>