force-app/main/default/objects/Material__c/fields/TemperatureType__c.field-meta.xml
<CustomField>
    <fullName>TemperatureType__c</fullName>
    <label>TEMPERATURE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TemperatureType</valueSetName>
    </valueSet>
</CustomField>