force-app/main/default/objects/Material__c/recordTypes/FreshMaterial.recordType-meta.xml
<RecordType>
    <fullName>FreshMaterial</fullName>
    <active>true</active>
    <label>Fresh Material</label>
</RecordType>