force-app/main/default/objects/Material__c/recordTypes/FrozenMaterial.recordType-meta.xml
<RecordType>
    <fullName>FrozenMaterial</fullName>
    <active>true</active>
    <label>Frozen Material</label>
</RecordType>