force-app/main/default/objects/Material__c/recordTypes/NonTemperatureMaterial.recordType-meta.xml
<RecordType>
    <fullName>NonTemperatureMaterial</fullName>
    <active>true</active>
    <label>Non Temperature Material</label>
</RecordType>